--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ markdown: kramdown
 kramdown:
   input: GFM
 title: Liz Shigetoshi
-description: "Hi, I'm Liz Shigetoshi. Full Stack Developer fueled by a daily dose of 150+ mg of caffeine and 150+ g of carbs drenched in hot sauce."
+description: "Hi, I'm Liz Shigetoshi."
 email: lizshigetoshi@gmail.com
 baseurl: ""
 url: "http://lizshigetoshi.com"
@@ -13,5 +13,5 @@ medium_username: lizshigetoshi
 instagram_username: lizshig
 facebook_username: shigetoshi
 linkedin_username: elizabethshigetoshi
-gems:
+plugins:
   - jemoji
