--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Ruby
-Gemfile.lock
-
 # OS
 # ===========
 .DS_Store
@@ -9,67 +6,14 @@ ehthumbs.db
 Icon?
 Thumbs.db
 
-# Node and related ecosystem
+# Ecosystem
 # ==========================
-.nodemonignore
+.jekyll-cache/
 .sass-cache/
-node_modules/
-public/lib/
-.idea/
-coverage/
-
-# app and assets
-# ======================
-public/dist/
-config/env/local.js
-config/env/local-*.js
-*.pem
 
 # Ignoring gh-pages branch for documentation
 _site/
 
-# General
-# =======
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
-*.tmp
-*.bak
-*.swp
-logs/
-build/
-
-# Sublime editor
+# VS Code Editor
 # ==============
-.sublime-project
-*.sublime-project
-*.sublime-workspace
-
-# Eclipse project files
-# =====================
-.project
-.settings/
-.*.md.html
-.metadata
-*~.nib
-local.properties
-
-# IntelliJ
-# ========
-*.iml
-
-# Cloud9 IDE
-# =========
-.c9/
-data/
-mongod
-
-# Visual Studio
-# =========
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
+.vscode
